--- a/home/botiboti/.config/i3/config
+++ b/home/botiboti/.config/i3/config
@@ -41,7 +41,7 @@ floating_modifier $mod
 
 # start a terminal
 # bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+Return exec "xterm -rv -ls"
+bindsym $mod+Return exec "xterm -rv -ls -fn '-*-terminus-*-16-*'"
 
 # kill focused window
 bindsym $mod+Shift+q kill
