--- a/home/botiboti/.config/i3/config
+++ b/home/botiboti/.config/i3/config
@@ -43,7 +43,7 @@ floating_modifier $mod
 # bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Return exec "xterm -rv -ls -fn '-*-terminus-*-16-*'"
 
-# cropscreenshot and save it to the clipboard
+# snapshot and save it to the clipboard
 bindsym --release $mod+s exec --no-startup-id "maim -s | xclip -selection clipboard -t image/png"
 
 # screenshot active window and paste to the clipboard
