--- a/home/botiboti/.config/i3/config
+++ b/home/botiboti/.config/i3/config
@@ -6,6 +6,7 @@
 #
 
 exec "volumeicon"
+exec_always --no-startup-id xsetroot -solid "#0D3B66"
 # exec "setxkbmap -layout us,hu"
 # exec "setxkbmap -option 'grp:alt_shift_toggle'"
 exec --no-startup-id setxkbmap -model pc105 -layout us,hu -option grp:switch
@@ -41,7 +42,7 @@ floating_modifier $mod
 
 # start a terminal
 # bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+Return exec "xterm -rv -ls -fn '-*-terminus-*-16-*'"
+bindsym $mod+Return exec "xterm -rv -ls -fn '-*-terminus-*-16-*' -bg Aquamarine3 -fg rgb:10/45/64"
 
 # snapshot and save it to the clipboard
 bindsym --release $mod+s exec --no-startup-id "maim -s | xclip -selection clipboard -t image/png"
@@ -184,4 +185,8 @@ bindsym $mod+r mode "resize"
 # finds out, if available)
 bar {
         status_command i3status
+        mode hide
+        colors {
+                background #006666
+        }
 }
