dm change, new custom commands, sink change bluetooth command added

--- a/home/botiboti/.config/i3/config
+++ b/home/botiboti/.config/i3/config
@@ -75,8 +75,8 @@ bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
 # change profile for Jabra headset
-bindsym --release $mod+b exec pactl set-card-profile bluez_card.70_BF_92_1A_CD_BA headset_head_unit 
-bindsym --release $mod+Shift+b exec pactl set-card-profile bluez_card.70_BF_92_1A_CD_BA a2dp_sink_aac
+bindsym --release $mod+b exec "pactl set-card-profile bluez_card.70_BF_92_1A_CD_BA headset_head_unit && pacmd set-default-sink bluez_sink.70_BF_92_1A_CD_BA.headset_head_unit"
+bindsym --release $mod+Shift+b exec "pactl set-card-profile bluez_card.70_BF_92_1A_CD_BA a2dp_sink_aac && pacmd set-default-sink bluez_sink.70_BF_92_1A_CD_BA.a2dp_sink" 
 
 # move focused window
 bindsym $mod+Shift+h move left
