--- a/home/botiboti/.config/i3/config
+++ b/home/botiboti/.config/i3/config
@@ -5,7 +5,7 @@
 # this file and re-run i3-config-wizard(1).
 #
 
-exec "volumeicon"
+exec "pnmixer"
 exec_always --no-startup-id xsetroot -solid "#0D3B66"
 # exec "setxkbmap -layout us,hu"
 # exec "setxkbmap -option 'grp:alt_shift_toggle'"
@@ -24,7 +24,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8
+font pango:source-code-pro 9
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -49,8 +49,12 @@ bindsym --release $mod+Shift+s exec --no-startup-id "maim -i $(xdotool getactive
 # kill focused window
 bindsym $mod+Shift+q kill
 
-# start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+# start rofi (a program launcher)
+bindsym $mod+d exec rofi -show run -theme Monokai
+# start rofi window mode
+bindsym $mod+Shift+d exec rofi -show window -theme Monokai
+# start rofi in drun mode
+bindsym $mod+Ctrl+Shift+d exec rofi -show drun -theme Monokai
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -180,6 +184,8 @@ mode "resize" {
 }
 
 bindsym $mod+r mode "resize"
+
+hide_edge_borders both
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
