--- a/home/botiboti/.config/i3status/config
+++ b/home/botiboti/.config/i3status/config
@@ -84,7 +84,7 @@ tztime hu {
 
 tztime ro {
   timezone = "Europe/Bucharest"
-  format = " %a %Y-%m-%d %H:%M:%S RO "
+  format = " %H:%M RO "
 }
 
 tztime pt {
