--- a/home/botiboti/.config/i3/config
+++ b/home/botiboti/.config/i3/config
@@ -5,7 +5,7 @@
 # this file and re-run i3-config-wizard(1).
 #
 
-exec "pnmixer"
+exec "volumeicon"
 exec_always --no-startup-id xsetroot -solid "#0D3B66"
 # exec "setxkbmap -layout us,hu"
 # exec "setxkbmap -option 'grp:alt_shift_toggle'"
