--- a/home/botiboti/.config/i3/config
+++ b/home/botiboti/.config/i3/config
@@ -6,11 +6,13 @@
 #
 
 exec "volumeicon"
-exec_always --no-startup-id xsetroot -solid "#0D3B66"
-exec "setxkbmap -layout us,hu"
-# exec "setxkbmap -option 'grp:alt_shift_toggle'"
-exec --no-startup-id setxkbmap -model pc105 -layout us,hu -option grp:switch
-# exec --no-startup-id setxkbmdt ap -model pc105 -layout us,pt -option grp:alt_shift_toggle
+exec_always --no-startup-id "xsetroot -solid '#0D3B66'"
+
+# Moved to config, under xserver
+
+# exec "setxkbmap -layout us,hu"
+# exec "setxkbmap -option 'grp:switch'"
+exec --no-startup-id "setxkbmap -model pc104 -layout us,hu -option 'grp:switch'"
 
 bindsym XF86MonBrightnessUp exec light -A 5
 bindsym XF86MonBrightnessDown exec light -U 5
